--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://bigcloud-spotify.mysql.database.azure.com/spotify?useSSL=true
+spring.datasource.url=jdbc:mysql://bigdata-spotify.mysql.database.azure.com/spotify?useSSL=true
 spring.datasource.username=gabrielmartinez
 spring.datasource.password=G090125m#
 spring.jpa.hibernate.ddl-auto=update
